--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,9 @@
 
     <groupId>org.example</groupId>
     <artifactId>AfterJava9Updates</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
